2014-07-25  Dan Bernstein  <mitz@apple.com>

        [Cocoa] WebProtectionSpace::receivesCredentialSecurely incorrectly returns false in some cases
        https://bugs.webkit.org/show_bug.cgi?id=135241

        Reviewed by Alexey Proskuryakov.

        * WebCore.exp.in: Export ProtectionSpace::receivesCredentialSecurely.

        * platform/network/cocoa/ProtectionSpaceCocoa.h: Declare override of receivesCredentialSecurely.
        * platform/network/cocoa/ProtectionSpaceCocoa.mm:
        (WebCore::ProtectionSpace::receivesCredentialSecurely): Use -[NSURLProtectionSpace receivesCredentialSecurely].

2014-07-25  Zalan Bujtas  <zalan@apple.com>

        Subpixel rendering: iOS video playback controls look blurry.
        https://bugs.webkit.org/show_bug.cgi?id=135245
        <rdar://problem/16878037>

        Reviewed by Simon Fraser.

        This patch introduces a compositing parent of the overlay control panel so that
        the transformed overlay panel becomes sharp. This is a workaround for webkit.org/b/135246.

        Can't find a way to test it yet.

        * Modules/mediacontrols/mediaControlsApple.css:
        (video::-webkit-media-controls-panel-composited-parent):
        * Modules/mediacontrols/mediaControlsApple.js:
        (Controller.prototype.createControls):
        (Controller.prototype.addControls):
        * Modules/mediacontrols/mediaControlsiOS.css:
        (video::-webkit-media-controls-panel-composited-parent):
        * Modules/mediacontrols/mediaControlsiOS.js: This is a workaround for webkit.org/b/135248
        It pushes the overlay panel down to close the gap with the video element. Since the
        panel's size in css pixels is scale dependent, the gap needs to be scale dependent too.
        (ControllerIOS.prototype.set pageScaleFactor):

2014-07-24  Dirk Schulze  <krit@webkit.org>

        Turn x/y to presentation attributes
        https://bugs.webkit.org/show_bug.cgi?id=135215

        Reviewed by Dean Jackson.
